--- a/css/text.css
+++ b/css/text.css
@@ -17,11 +17,18 @@ article {
     text-align:center;
 }
 
-p {
-    color:white;
+.slogan {
+    color:rgb(241, 90, 41);
     text-align:center;
 }
 
+.arrow {
+    margin: auto;
+    display:block;
+    height:50px;
+    width:50px;
+    margin-top:150px;
+}
 #albumart {
     width:100%;
     height:100%;
@@ -108,12 +115,26 @@ ul  {
     background: linear-gradient(black, #F15A29);
 }
 
+.fa {
+    color:white;
+    margin-left:20px;
+    margin-top:15px; 
+}
+
+.fa:hover {
+    color:rgb(241, 90, 41);
+}
+
 footer {
     width:100%;
     background-color:black;
-    height:50px;
+    height:50px;  
 }
 
+#logofooter {
+    height:20px;
+    margin-left:20px;
+}
 
 
 /* MEDIA QUERIES
